Fixing Toggle Animation on Firefox browser

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/animation-toggler-collapse.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/animation-toggler-collapse.scss
@@ -7,6 +7,7 @@
 
   &[data-display="hide"] {
     animation: collapse-hide 0.1s ease-in-out forwards;
+    display: none !important;
   }
 
   &[data-display="show"] {
@@ -16,36 +17,47 @@
 
 @keyframes collapse-hide {
   0% {
+    visibility: visible;
     transform: translateY(0%);
     max-height: 100%;
     opacity: 1;
   }
-  99.9% {
+  99% {
+    visibility: hidden;
+    display: none !important;
     transform: translateY(-99%);
     max-height: 0%;
+    height: 0px;
     opacity: 0;
   }
   100% {
     transform: translateY(-100%);
-    display: none;
+    visibility: hidden;
+    display: none !important;
     max-height: 0%;
+    height: 0px;
     opacity: 0;
   }
 }
 
 @keyframes collapse-show {
   0% {
+    visibility: hidden;
     transform: translateY(-100%);
-    display: none;
+    display: none !important;
     max-height: 0%;
+    height: 0px;
     opacity: 0;
   }
   1% {
+    visibility: visible;
     transform: translateY(-99%);
-    max-height: 0%;
+    max-height: 1%;
+    height: 1%;
     opacity: 0;
   }
   100% {
+    visibility: visible;
     transform: translateY(0%);
     max-height: 100%;
     opacity: 1;
